<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    tools:context=".ui.LoginActivity">

    <TextView
        style="@style/tvStyleBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_20sdp" />

    <TextView
        style="@style/tvStyleBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_16sdp" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username"
            style="@style/edtStyle"
            android:padding="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/colorBlack" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            style="@style/edtStyle"
            android:padding="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_16sdp"
            android:inputType="textPassword"
            android:textColorHint="@color/colorBlack" />
    </com.google.android.material.textfield.TextInputLayout>
   <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_50sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_rodamas" />

</androidx.appcompat.widget.LinearLayoutCompat>