<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp"
    android:orientation="vertical">
    <TextView
        style="@style/tvStyleBold"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/update_password"
        android:gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/tvStyleRegular"
            android:id="@+id/tv_sender_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sender_email"
            android:gravity="start"
            android:visibility="gone"
            android:layout_weight="2.5"
            android:layout_marginStart="@dimen/_8sdp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_9sdp" />
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/edtStyle"
            android:id="@+id/edt_sender_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sender_email"
            android:padding="@dimen/_8sdp"
            android:layout_weight="1"
            android:inputType="text"
            android:lines="1"
            android:visibility="gone"
            android:maxLines="1"
            android:maxLength="100"
            android:background="@drawable/bg_rounded_gray"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        style="@style/tvStyleRegular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/old_password"
        android:gravity="start"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/edtStyle"
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:padding="@dimen/_8sdp"
            android:layout_weight="1"
            android:lines="1"
            android:maxLines="1"
            android:maxLength="250"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:background="@drawable/bg_rounded_gray"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

    <TextView
        style="@style/tvStyleRegular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/new_password"
        android:gravity="start"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />
    <androidx.appcompat.widget.AppCompatEditText
        style="@style/edtStyle"
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:padding="@dimen/_8sdp"
        android:layout_weight="1"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="250"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:background="@drawable/bg_rounded_gray"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_14sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_height="wrap_content">
        <Button
        style="@style/button"
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/update"
        android:textAllCaps="false" />
        <androidx.appcompat.widget.AppCompatButton
            style="@style/button"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorRed"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/cancel"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>