<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.AssetActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_filter"
        android:background="@drawable/bg_board_green"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"

        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvAllAsset"
            style="@style/tvStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_below="@+id/textview"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/total_asset"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tvOpenAsset"
            style="@style/tvStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_below="@+id/textview"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/total_open"
            android:textColor="@color/colorRed"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tvDoneAsset"
            style="@style/tvStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_below="@+id/textview"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/total_done"
            android:textColor="@color/colorGreen"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_filter"
        tools:itemCount="30"
        tools:listitem="@layout/item_asset_header" />

    <include
        android:id="@+id/llNoDataFound"
        layout="@layout/layout_nodatafound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_new"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/colorWhite"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@null" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
